@@ -21,6 +21,8 @@
 #include "config.h"
 #include "QtFallbackWebPopup.h"
 
+#ifndef QT_NO_COMBOBOX
+
 #include "HostWindow.h"
 #include "PopupMenuClient.h"
 #include "QWebPageClient.h"
@@ -225,3 +227,5 @@ void QtFallbackWebPopup::activeChanged(int index)
 }
 
 }
+
+#endif // QT_NO_COMBOBOX
